# depositaire

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  config.py  database.py  depositaire.cfg  depositaire.sql  logger.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: build-docker.yml  codeql-analysis.yml  docker-build-and-deploy.yml  docker-build-and-publish.yml  greetings.yml  labeler.yml  lint-python.yml  python-lint-and-test.yml
depositaire/: __init__.py  config.py  database.py  entity.py  holder_statuses.py  holder_types.py  holders.py  transaction_codes.py  transactions.py  util.py
routes/api/v1/: __init__.py  api_v1.py  entity.py  transactions.py  util.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_entity.py  test_holder_statuses.py  test_holder_types.py  test_holders.py  test_init.py  test_route.py  test_transaction_codes.py  test_transactions.py
