[tool.poetry]
name = "depositaire"
version = "0.1.0"
description = "A share registrar solution for the 21st century."

license = "GPL-3.0"

authors = ["Nick Schlobohm <nickschlobohm@protonmail.ch>"]

readme = "README.md"

repository = "https://github.com/quelixir/depositaire"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
toml = "^0.10.2"
python-dotenv = "^0.19.0"
mysql-connector-python = "^8.0.26"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8_commas = "^2.0.0"
flake8-comprehensions = "^3.5.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.1.0"
flake8-isort = "^4.0.0"
flake8-quotes = "^3.2.0"
pep8-naming = "^0.12.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.1.6"]
build-backend = "poetry.core.masonry.api"
