[tool.poetry]
name = "depositaire"
version = "0.1.0"
description = "A share registrar solution for the 21st century."

license = "AGPL-3.0"

authors = ["Nick Schlobohm <nks@schlobohm.one>"]

readme = "README.md"

repository = "https://github.com/quelixir/depositaire"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
toml = "^0.10.2"
python-dotenv = "^1.0.0"
mysql-connector-python = "^8.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
flake8_commas = "^4.0.0"
flake8-comprehensions = "^3.14.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.0.0"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.14.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
safety = "^3.2.4"
commitizen = "^3.27.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
